Signed-off-by: iixiaowei <iixiaowei@163.com>

--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,19 +1,11 @@
-   Options +FollowSymLinks
-
-   IndexIgnore */*
-
-   RewriteEngine on
-
-
-
-   # if a directory or a file exists, use it directly
-
-   RewriteCond %{REQUEST_FILENAME} !-f
-
-   RewriteCond %{REQUEST_FILENAME} !-d
-
-
-
-   # otherwise forward it to index.php
-
-   RewriteRule . index.php
+# prevent directory listings
+Options -Indexes
+# follow symbolic links
+Options FollowSymlinks
+# use mod_rewrite for pretty URL support
+RewriteEngine on
+# if a directory or a file exists, use the request directly
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+# otherwise forward the request to index.php
+RewriteRule . index.php
